Fix lazy load using imagesloaded and add text shadow to image covering
- Also rename rsvp-cleanup

--- a/rsvp/static/css/homepage.css
+++ b/rsvp/static/css/homepage.css
@@ -21,6 +21,7 @@
   position: absolute;
   top: 30px;
   width: 100%;
+  text-shadow: 1px 1px 4px white;
 }
 .one-vh img {
   width: 100%;
